Bug 318306 - Ark doesn't update caption and recent files list after archive opening.
Summary: Ark doesn't update caption and recent files list after archive opening.
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords: regression
Depends on:
Blocks: 314596
  Show dependency treegraph
 
Reported: 2013-04-13 19:36 UTC by Alexandr Akulich
Modified: 2013-04-27 19:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandr Akulich 2013-04-13 19:36:09 UTC
Summary is enough.

Reproducible: Always

Steps to Reproduce:
1. Open archive
2a. Look onto caption
2b. Open recent files menu.
Actual Results:  
a) Caption is always "Ark"
b) Recent files menu doesn't contain last file entry.

Expected Results:  
a) Caption like "ark-4.10.2.tar.xz - Ark"
b) Recent files menu with first entry "ark-4.10.2.tar.xz".

Line 216 at MainWindow.cpp always return false due to bug at end of Ark::Part::openFile(), which  operate with "QScopedPointer<Kerfuffle::Archive> archive" in old way (Kerfuffle::Archive *archive).
Checking "archive" after "archive.take()" leads in bug.
Comment 1 Alexandr Akulich 2013-04-13 19:37:58 UTC
Review request: https://git.reviewboard.kde.org/r/109953/
Comment 2 Raphael Kubo da Costa 2013-04-27 12:45:53 UTC
Git commit 03b5810f1e68f13fe564b873ffdd01fe82ba6aca by Raphael Kubo da Costa, on behalf of Alexandr Akulich.
Committed on 27/04/2013 at 11:18.
Pushed by rkcosta into branch 'KDE/4.10'.

Fix of Ark::Part::openFile().

Repair window caption and recent files menu updating once archive is opened.

REVIEW: 109953

M  +2    -2    part/part.cpp

http://commits.kde.org/ark/03b5810f1e68f13fe564b873ffdd01fe82ba6aca
Comment 3 Raphael Kubo da Costa 2013-04-27 12:47:23 UTC
FWIW, I've also merged this into master.