Fix of Ark::Part::openFile().

Repair window caption and recent files menu updating once archive is opened.

REVIEW: 109953
BUG: 318306